Fixed issue with page overflow

--- a/cs_app/static/css/sub_styles/home_style.css
+++ b/cs_app/static/css/sub_styles/home_style.css
@@ -39,9 +39,18 @@ h3 {
     right: 1px;
 }
 
+.left-pos {
+    transform: translateX(calc(-100% - 1rem));
+}
+
+.right-pos {
+    transform: translateX(0rem);
+}
+
+
 #main-container {
     width: 100%;
-    height: 94%;
+    height: 100%;
 
     background-color: rgb(235, 235, 235);
 
@@ -56,6 +65,7 @@ h3 {
 #left {
     width: 50%;
     height: 100%;
+    box-sizing: border-box;
 
     background-color: white;
 
@@ -67,7 +77,7 @@ h3 {
 
 #right {
     width: 50%;
-    height: calc(100% + 1px);
+    height: 100%;
     padding: var(--lg-gap);
     box-sizing: border-box;
 
@@ -90,6 +100,11 @@ h3 {
     transition: transform 0.5s ease;
 }
 
+
+#right > span > div {
+    overflow: hidden;
+}
+
 #right > span > div > p {
     margin-left: var(--sm-gap);
 
@@ -104,16 +119,4 @@ span:hover {
 
 span:hover > .sep-v {
     height: 100%;
-}
-
-#right > span > div {
-    overflow: hidden;
-}
-
-.left-pos {
-    transform: translateX(calc(-100% - 1rem));
-}
-
-.right-pos {
-    transform: translateX(0rem);
 }
